--- a/src/styles/components/ResumeButton.module.css
+++ b/src/styles/components/ResumeButton.module.css
@@ -25,13 +25,19 @@
   transform: rotate(30deg) translateY(-100%);
 }
 
-.button:hover::after {
+@media (hover: hover) {
+  .button:hover::after {
+    transform: rotate(0deg) translateY(0);
+  }
+}
+
+.button:active::after {
   transform: rotate(0deg) translateY(0);
 }
 
 @media screen and (min-width: 768.98px) {
   .button {
     font-size: 0.9rem;
-    padding: 0.8rem 1.2rem;
+    padding: 0.6rem 1.2rem;
   }
 }
