fix: box-shadow transition

--- a/src/styles/components/Header.module.css
+++ b/src/styles/components/Header.module.css
@@ -10,6 +10,7 @@
   padding: 0px 50px;
   z-index: var(--z-index-header);
   transition: var(--transition-header);
+  box-shadow: none;
 }
 
 .header[data-open="true"] {
