fix: hardcoded font size

--- a/src/styles/components/Navmenu.module.css
+++ b/src/styles/components/Navmenu.module.css
@@ -11,7 +11,7 @@
   position: relative;
   margin: 0px 8px;
   counter-increment: item 1;
-  font-size: 0.9rem;
+  font-size: clamp(var(--fs-sm), 1.6vw, var(--fs-lg));
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -28,7 +28,7 @@
   display: inline;
   margin-right: 5px;
   color: var(--sidenav-index);
-  font-size: 0.8rem;
+  font-size: clamp(var(--fs-xs), 1.2vw, var(--fs-md));
 }
 
 .menu_item::after {
