--- a/src/styles/components/ResumeButton.module.css
+++ b/src/styles/components/ResumeButton.module.css
@@ -7,7 +7,7 @@
   border-radius: 4px;
   overflow: hidden;
   font-family: var(--font-mono);
-  font-size: 1rem;
+  font-size:  var(--fs-lg);
 }
 
 .button::after {
@@ -37,7 +37,7 @@
 
 @media screen and (min-width: 768.98px) {
   .button {
-    font-size: 0.9rem;
+    font-size: var(--fs-md);
     padding: 0.6rem 1.2rem;
   }
 }
