--- a/src/styles/slides/About.module.css
+++ b/src/styles/slides/About.module.css
@@ -3,11 +3,12 @@
 }
 
 .content {
-  font-size: clamp(var(--fs-md), 3vw, var(--fs-lg));
+  font-size: clamp(var(--fs-md), 2vw, var(--fs-lg));
 }
 
 .content p {
   margin-bottom: 15px;
+  font-family: var(--font-mono);
 }
 
 .picture {
