feat: Add employement period in experience tab

--- a/src/styles/components/Tabs.module.css
+++ b/src/styles/components/Tabs.module.css
@@ -92,6 +92,10 @@
   font-size: var(--fs-sm);
 }
 
+.duration span {
+  color: var(--color-secondary);
+}
+
 .panel .description {
   list-style: none;
   margin-top: 25px;
