--- a/src/styles/app/Portfolio.module.css
+++ b/src/styles/app/Portfolio.module.css
@@ -1,18 +1,24 @@
 .main {
-  padding: 0 50px;
+  margin: 0 auto;
+  padding: 0 25px;
+  min-height: 100vh;
+  counter-reset: section 0;
 }
 
-.h1 {
-  color: var(--primary);
-  width: 100%;
-  height: 100vh;
-  padding-top: 120px;
-  display: grid;
-  place-content: center;
-}
-
-@media screen and (min-width: 768.98px) {
+@media screen and (min-width: 479.98px) {
   .main {
-    padding: 0 100px;
+    padding: 0px 50px;
+  }
+}
+
+@media screen and (min-width: 767.98px) {
+  .main {
+    padding: 0px 100px;
+  }
+}
+
+@media screen and (min-width: 1023.98px) {
+  .main {
+    padding: 0px 100px;
   }
 }
